# emit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
batcher/: Cargo.toml  README.md
batcher/src/: internal_metrics.rs  lib.rs  sync.rs  tokio.rs
benches/: Cargo.toml
benchmark/: Cargo.toml  batcher.rs  emit.rs  log.rs  span.rs  tracing.rs
core/: Cargo.toml  README.md
core/src/: ambient.rs  and.rs  by_ref.rs  clock.rs  ctxt.rs  emitter.rs  empty.rs  event.rs  extent.rs  filter.rs  id.rs  key.rs  level.rs  lib.rs  metrics.rs  or.rs  path.rs  props.rs  rng.rs  runtime.rs  str.rs  target.rs  template.rs  time.rs  timestamp.rs  value.rs  well_known.rs
ct/: Cargo.toml  build.rs
ct/src/: capture.rs  emit.rs  lib.rs
emitter/file/: Cargo.toml  README.md
emitter/file/src/: internal_metrics.rs  lib.rs
emitter/opentelemetry/: Cargo.toml  README.md
emitter/opentelemetry/src/: internal_metrics.rs  lib.rs
emitter/otlp/: Cargo.toml  README.md
emitter/otlp/src/: client.rs  error.rs  lib.rs
emitter/otlp/src/client/: http.rs  logs.rs  metrics.rs  traces.rs
emitter/otlp/src/data/: any_value.rs  generated.rs  logs.rs  metrics.rs  resource.rs  traces.rs
emitter/otlp/src/data/logs/: log_record.rs
emitter/otlp/src/data/metrics/: metric.rs
emitter/term/: Cargo.toml  README.md
emitter/term/src/: lib.rs
enrich/: Cargo.toml
enrich/src/: ctxt.rs  lib.rs  properties.rs
examples/common_patterns/: Cargo.toml  emit_errors.rs  emit_multiple_emitters.rs  emit_non_identifier_keys.rs  emit_optional_values.rs  emit_serde_values.rs  filter_by_level.rs  filter_per_emitter.rs  lib.rs  span_manual_completion.rs  span_trace_propagation.rs
examples/opentelemetry/direct_otlp/: Cargo.toml
examples/opentelemetry/direct_otlp/src/: main.rs
examples/opentelemetry/via_sdk/: Cargo.toml
examples/opentelemetry/via_sdk/src/: main.rs
macros/: .gitignore  Cargo.toml  README.md  build.rs
macros/impl/: Cargo.toml
macros/impl/src/: lib.rs  source.rs
macros/private/: Cargo.toml
macros/private/src/: capture.rs  lib.rs  source.rs
macros/rt/: Cargo.toml
macros/rt/src/: capture.rs  lib.rs  log.rs  source.rs  template.rs  value.rs
macros/src/: args.rs  build.rs  capture.rs  ctxt.rs  emit.rs  event.rs  filter.rs  fmt.rs  format.rs  hook.rs  in_ctxt.rs  key.rs  lib.rs  log.rs  module.rs  optional.rs  props.rs  push_ctxt.rs  scope.rs  set.rs  source.rs  span.rs  template.rs  time.rs  util.rs  with.rs
macros/template/: Cargo.toml
macros/template/src/: lib.rs
macros/tests/ui/fail/: capture_unsatisfied_trait.rs  capture_unsatisfied_trait.stderr  log_interpolated_unsatisfied_trait_debug.rs  log_interpolated_unsatisfied_trait_debug.stderr  log_interpolated_unsatisfied_trait_default.rs  log_interpolated_unsatisfied_trait_default.stderr  log_unsatisfied_trait.rs  log_unsatisfied_trait.stderr  log_unsatisfied_trait_debug.rs  log_unsatisfied_trait_debug.stderr  log_unsatisfied_trait_default.rs  log_unsatisfied_trait_default.stderr
macros/tests/ui/pass/: capture_match.rs  capture_simple.rs  log_additional.rs  log_interpolated.rs  log_mixed.rs  log_real.rs  log_simple.rs  log_simple_additional.rs  log_simple_interpolated.rs  log_simple_mixed.rs
metrics/: Cargo.toml
rt/: Cargo.toml
rt/src/: capture.rs  emit.rs  event.rs  kvs.rs  lib.rs  log.rs  record.rs  template.rs  well_known.rs
src/: adapt.rs  ambient.rs  capture.rs  ctxt.rs  emit.rs  empty.rs  event.rs  filter.rs  frame.rs  id.rs  to.rs  (+21 more)
targets/file/: Cargo.toml
targets/file/src/: internal_metrics.rs  lib.rs
targets/opentelemetry/: Cargo.toml
targets/opentelemetry/src/: id.rs  key.rs  lib.rs  logs.rs  record.rs  traces.rs  value.rs
targets/otlp/: Cargo.toml
targets/otlp-logs/: Cargo.toml
targets/otlp-logs/src/: batcher.rs  lib.rs  otlp.rs  proto.rs  record.rs  value.rs
targets/otlp-logs/src/otlp/: opentelemetry.proto.collector.logs.v1.rs
targets/otlp-logs/src/proto/: opentelemetry.proto.logs.v1.rs
targets/otlp/src/: client.rs  data.rs  error.rs  internal_metrics.rs  lib.rs  logs.rs  proto.rs  traces.rs  value.rs
targets/otlp/src/client/: http.rs  logs.rs  metrics.rs  traces.rs
targets/otlp/src/data/: any_value.rs  attributes.rs  export_logs_service.rs  generated.rs  instrumentation_scope.rs  log_record.rs  logs.rs  metrics.rs  resource.rs  traces.rs
targets/otlp/src/data/logs/: export_logs_service.rs  log_record.rs
targets/otlp/src/data/metrics/: export_metrics_service.rs  metric.rs
targets/otlp/src/data/traces/: export_trace_service.rs  span.rs
targets/otlp/src/proto/: opentelemetry.proto.collector.trace.v1.rs
targets/term/: Cargo.toml
targets/term/src/: lib.rs
template/: Cargo.toml
template/src/: ct.rs  lib.rs  rt.rs
template/src/ct/: mod.rs  parts.rs
template/src/rt/: mod.rs
test/smoke-test/: .gitignore  Cargo.toml  main.rs
tests/log-test/: Cargo.toml  main.rs
tests/smoke-test/: Cargo.toml  main.rs
tests/tracing-test/: Cargo.toml  main.rs
tests/ui/: Cargo.toml  lib.rs
tests/ui/fail/: log_cfg_unused.rs  log_cfg_unused.stderr  log_control_flow.rs  log_control_flow.stderr  log_interpolated_unsatisfied_trait_debug.rs  log_interpolated_unsatisfied_trait_debug.stderr  log_interpolated_unsatisfied_trait_default.rs  log_interpolated_unsatisfied_trait_default.stderr  log_many_refs.rs  log_many_refs.stderr  log_misplaced_attr.rs  log_misplaced_attr.stderr  log_no_tpl.rs  log_no_tpl.stderr  log_non_error_err.rs  log_non_error_err.stderr  log_path_expr.rs  log_path_expr.stderr  log_unknown_arg.rs  log_unknown_arg.stderr  log_unknown_key.rs  log_unknown_key.stderr  log_unknown_key_tpl.rs  log_unknown_key_tpl.stderr  log_unkown_attr_arg.rs  log_unkown_attr_arg.stderr
tests/ui/pass/: format.rs  log_additional.rs  log_cfg.rs  log_custom_target.rs  log_err.rs  log_external.rs  log_interpolated.rs  log_many_ref.rs  log_mixed.rs  log_non_err.rs  log_real.rs  log_source.rs  log_yak.rs
value/: Cargo.toml  build.rs
value/src/: error.rs  fill.rs  impls.rs  lib.rs  test.rs
value/src/internal/: error.rs  fmt.rs  mod.rs  serde.rs  sval.rs
value/src/internal/cast/: mod.rs  primitive.rs
(+28 files in other folders)
