[workspace]
members = [
    "core",
    "batcher",
    "metrics",
    "targets/term",
    "targets/file",
    "targets/otlp",
    "targets/otlp/gen",
    "targets/tracing",
    "targets/log",
    "macros",
    "benchmark", "targets/tracing", "targets/log",
]
exclude = [
    "tests/smoke-test"
]

[package]
name = "emit"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"

[features]
default = ["std", "rng"]
std = ["emit_macros/std", "emit_core/std"]
alloc = ["emit_core/alloc"]
sval = ["emit_macros/sval", "emit_core/sval", "dep:sval"]
serde = ["emit_macros/serde", "emit_core/serde", "dep:serde"]
rng = ["dep:rand"]

[dependencies.emit_macros]
path = "macros"

[dependencies.emit_core]
path = "core"

[dependencies.value-bag]
version = "1"

[dependencies.sval]
version = "2"
optional = true
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.rand]
version = "0.8"
optional = true
