[workspace]
members = [
    "core",
    "batcher",
    "emitter/term",
    "emitter/file",
    "emitter/otlp",
    "emitter/otlp/gen",
    "emitter/opentelemetry",
    "macros",
    "examples/common_patterns",
    "examples/opentelemetry/direct_otlp",
    "examples/opentelemetry/via_sdk",
]

[package]
name = "emit"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"

[features]
default = ["std", "rand", "implicit_rt"]
std = ["alloc", "emit_macros/std", "emit_core/std", "rand"]
alloc = ["emit_core/alloc"]
sval = ["emit_macros/sval", "emit_core/sval", "dep:sval"]
serde = ["emit_macros/serde", "emit_core/serde", "dep:serde"]
implicit_rt = ["emit_core/implicit_rt", "emit_macros/implicit_rt"]
implicit_internal_rt = ["emit_core/implicit_internal_rt"]

[dependencies.emit_macros]
path = "macros"

[dependencies.emit_core]
path = "core"
default-features = false

[dependencies.value-bag]
version = "1"

[dependencies.sval]
version = "2"
optional = true
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies.serde]
version = "1"
features = ["derive"]
