[package]
name = "emit_batcher"
version = "0.11.0-alpha.1"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kodraus/emit"
description = "Batch processing infrastructure for emit."
edition = "2021"

[package.metadata.docs.rs]
features = ["tokio"]

[dependencies.emit]
version = "0.11.0-alpha.1"
path = "../"
default-features = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync", "time"]
optional = true
