[package]
name = "emit_core"
version = "0.0.0"
edition = "2021"

[features]
std = ["alloc", "value-bag/error", "sval_nested?/std", "sval?/std", "serde?/std"]
alloc = ["value-bag/alloc", "value-bag/owned", "sval_nested?/alloc", "sval?/alloc", "serde?/alloc"]
sval = ["value-bag/sval", "dep:sval", "dep:sval_ref", "dep:sval_nested"]
serde = ["value-bag/serde", "dep:serde"]

[dependencies.value-bag]
version = "1"
features = ["inline-i128", "seq"]

[dependencies.sval]
version = "2"
optional = true
default-features = false

[dependencies.sval_ref]
version = "2"
optional = true
default-features = false

[dependencies.sval_nested]
version = "2"
optional = true
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false
