[package]
name = "emit_ct"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
build = "build.rs"

[lib]
proc-macro = true

[features]
std = []
serde = []
sval = []

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.fv-template]
version = "0.2"

[dependencies.emit_rt]
path = "../rt"
