[package]
name = "antlog_enrich"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[dependencies.stdlog]
git = "https://github.com/KodrAus/log.git"
branch = "feat/antlog"
features = ["std", "kv_unstable", "kv_unstable_sval"]
package = "log"

[dependencies.sval]
version = "0.5"
features = ["std"]

[dependencies.futures]
version = "0.3"

[dependencies.pin-project]
version = "0.4"

[dependencies.take_mut]
version = "0.2"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.sval]
version = "0.5"
features = ["std", "serde"]
