[package]
name = "emit_macros"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.thiserror]
version = "1"

[dependencies.fv-template]
path = "../template"

[dev-dependencies.emit_macros_rt]
path = "rt"
features = ["std", "tracing"]

[dev-dependencies.trybuild]
version = "1"

[dev-dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-subscriber]
version = "0.2"
