[package]
name = "emit_macros"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
build = "build.rs"

[lib]
proc-macro = true

[features]
std = []
serde = []
sval = []
implicit_rt = []

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.emit_core]
path = "../core"

[dependencies.fv-template]
version = "0.4"
