[package]
name = "emit_rt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[features]
tracing = ["tracing-core"]
std = ["value-bag/std", "value-bag/error", "sval/std"]
serde = ["serde_lib", "value-bag/serde"]

[dependencies.value-bag]
git = "https://github.com/sval-rs/value-bag"
branch = "feat/str-capturing"
features = ["sval"]

[dependencies.fv-template]
version = "0.1.0"

[dependencies.sval]
version = "1.0.0-alpha.5"

[dependencies.serde_lib]
version = "1"
default-features = false
optional = true
package = "serde"

[dependencies.tracing-core]
version = "0.1"
default-features = false
optional = true
