[package]
name = "emit_rt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"

[features]
tracing = ["dep:tracing-core"]
std = ["value-bag/std", "value-bag/error"]
sval = ["value-bag/sval2", "dep:sval"]
serde = ["value-bag/serde1", "dep:serde"]

[dependencies.value-bag]
version = "1"

[dependencies.fv-template]
version = "0.1.0"

[dependencies.sval]
version = "2"
default-features = false
optional = true

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.tracing-core]
version = "0.1"
default-features = false
optional = true
