[package]
name = "fv-template"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.thiserror]
version = "1"

# TODO: Replace with a generic `fv-template_value` crate
[dev-dependencies.log]
git = "https://github.com/KodrAus/log.git"
branch = "feat/kv-error"
features = ["kv_unstable"]
