[package]
name = "value-bag"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[features]
std = []

[dependencies.sval]
version = "1.0.0-alpha.2"
optional = true
default-features = false
features = ["fmt"]

[dev-dependencies.sval]
version = "1.0.0-alpha.2"
features = ["test"]
