[package]
name = "value-bag"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
build = "build.rs"

[features]
std = []
serde = [
    "serde_lib",
    "sval/serde1",
    "sval/alloc",
    "erased-serde/alloc",
    "serde_fmt"
]

[dependencies.sval]
version = "1.0.0-alpha.3"
optional = true
default-features = false
features = ["fmt"]

[dependencies.serde_lib]
version = "1"
default-features = false
optional = true
package = "serde"

[dependencies.serde_fmt]
version = "1"
optional = true

[dependencies.erased-serde]
version = "0.3"
default-features = false
optional = true

# Only needed on non-nightly compilers
[dependencies.ctor]
version = "0.1"

[build-dependencies]
version_check = "0.9"

[dev-dependencies.sval]
version = "1.0.0-alpha.3"
features = ["test"]

[dev-dependencies.serde_test]
version = "1"
