[package]
name = "emit_term"
version = "0.11.0-alpha.1"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kodraus/emit"
description = "Emit diagnostic events to the console."
keywords = ["logging", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
edition = "2021"

[dependencies.emit]
version = "0.11.0-alpha.1"
path = "../../"
default-features = false
features = ["std", "sval"]

[dependencies.sval]
version = "2"

[dependencies.sval_fmt]
version = "2"

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[dependencies.termcolor]
version = "1"

[dev-dependencies.emit]
version = "0.11.0-alpha.1"
path = "../../"
features = ["implicit_rt"]
