[package]
name = "antlog_macros_rt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[dependencies.value-bag]
path = "../../value"
features = ["std", "sval"]

[dependencies.fv-template]
path = "../../template"

[dependencies.sval]
version = "1.0.0-alpha.2"
features = ["std"]

[dependencies.tracing-core]
version = "0.1"
