[package]
name = "emit_macros_rt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[features]
tracing = ["tracing-core"]
std = ["value-bag/std", "sval/std"]
serde = ["serde_lib", "value-bag/serde"]

[dependencies.value-bag]
version = "0.1"
features = ["sval"]

[dependencies.fv-template]
path = "../../template"

[dependencies.sval]
version = "1.0.0-alpha.3"

[dependencies.serde_lib]
version = "1"
default-features = false
optional = true
package = "serde"

[dependencies.sval_json]
version = "1.0.0-alpha.3"

[dependencies.tracing-core]
version = "0.1"
default-features = false
optional = true
