[package]
name = "emit_file"
version = "0.0.0"
edition = "2021"

[features]
default = ["default_writer"]
default_writer = ["emit/sval", "sval_json"]

[dependencies.emit]
path = "../../"
default-features = false
features = ["std"]

[dependencies.sval]
version = "2"

[dependencies.sval_json]
version = "2"
features = ["std"]
optional = true

[dependencies.emit_batcher]
path = "../../batcher"

[dependencies.rand]
version = "0.8"
