[package]
name = "emit-opentelemetry"
version = "0.0.0"
edition = "2021"

[dependencies.emit_core]
path = "../../core"
features = ["std", "serde"]

[dependencies.opentelemetry_sdk]
git = "https://github.com/open-telemetry/opentelemetry-rust"
features = ["logs", "trace"]

[dependencies.opentelemetry_api]
git = "https://github.com/open-telemetry/opentelemetry-rust"
features = ["logs", "trace"]

[dependencies.serde]
version = "1"
