[package]
name = "emit_opentelemetry"
version = "0.0.0"
edition = "2021"

[dependencies.emit]
path = "../../"
features = ["std", "serde"]

[dependencies.opentelemetry_sdk]
version = "0.22"
features = ["logs", "trace"]

[dependencies.opentelemetry]
version = "0.22"
features = ["logs", "trace"]

[dependencies.serde]
version = "1"
