[package]
name = "emit_opentelemetry"
version = "0.0.0"
edition = "2021"

[dependencies.emit]
path = "../../"
features = ["std", "serde", "implicit_internal_rt"]
default-features = false

[dependencies.opentelemetry_sdk]
version = "0.22"
features = ["logs", "trace"]

[dependencies.opentelemetry]
version = "0.22"
features = ["logs", "trace"]

[dependencies.serde]
version = "1"

[dev-dependencies.emit]
path = "../../"
features = ["implicit_rt"]
