[package]
name = "emit_otlp"
version = "0.0.0"
edition = "2021"

[features]
default = ["http"]
http = ["dep:hyper", "dep:hyper-util"]
grpc = ["dep:prost", "dep:serde", "emit_core/serde"]

[dependencies.emit_core]
path = "../../core"
features = ["std", "sval"]

[dependencies.emit_batcher]
path = "../../batcher"
features = ["tokio"]

[dependencies.sval]
version = "2.10"
features = ["std"]

[dependencies.sval_ref]
version = "2.10"

[dependencies.sval_derive]
version = "2.10"
features = ["std", "flatten"]

[dependencies.sval_protobuf]
version = "0.1"
features = ["bytes"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync"]

[dependencies.hyper]
optional = true
version = "1"
features = ["client", "http1"]

[dependencies.hyper-util]
optional = true
version = "0.1"
features = ["tokio"]

[dependencies.bytes]
version = "1"

[dependencies.prost]
version = "0.11"
optional = true

[dependencies.serde]
version = "1"
optional = true
