[package]
name = "emit_otlp"
version = "0.0.0"
edition = "2021"

[features]
default = ["http", "grpc"]
http = ["dep:hyper", "dep:hyper-util"]
grpc = ["dep:prost", "dep:serde", "emit/serde"]
decode_responses = ["dep:prost", "dep:prost-types"]

[dependencies.emit]
path = "../../"
features = ["std", "sval"]
default-features = false

[dependencies.emit_batcher]
path = "../../batcher"
features = ["tokio"]

[dependencies.sval]
version = "2.10"
features = ["std"]

[dependencies.sval_ref]
version = "2.10"

[dependencies.sval_derive]
version = "2.10"
features = ["std", "flatten"]

[dependencies.sval_protobuf]
version = "0.1"
features = ["bytes"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync"]

[dependencies.hyper]
optional = true
version = "1"
features = ["client", "http1"]

[dependencies.hyper-util]
optional = true
version = "0.1"
features = ["tokio"]

[dependencies.bytes]
version = "1"

[dependencies.prost]
version = "0.12"
optional = true

[dependencies.prost-types]
version = "0.12"
optional = true

[dependencies.serde]
version = "1"
optional = true
