[package]
name = "emit_term"
version = "0.0.0"
edition = "2021"

[dependencies.emit]
path = "../../"
default-features = false
features = ["std", "sval"]

[dependencies.sval]
version = "2"

[dependencies.sval_fmt]
version = "2"

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[dependencies.termcolor]
version = "1"

[dev-dependencies.emit]
path = "../../"
features = ["implicit_rt"]
