[package]
name = "emit-log-test"
version = "0.0.0"
publish = false
edition = "2021"

[[bin]]
name = "emit-log-test"
path = "main.rs"

[dependencies.emit]
path = "../../"

[dependencies.emit_log]
path = "../../targets/log"

[dependencies.log]
version = "0.4.21"

[dependencies.env_logger]
version = "0.11.3"
features = ["unstable-kv"]
