[package]
name = "emit-smoke-test"
version = "0.0.0"
publish = false
edition = "2021"

[[bin]]
name = "emit-smoke-test"
path = "main.rs"

[dependencies.emit]
path = "../../"

[dependencies.emit-otlp-logs]
path = "../../targets/otlp-logs"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread"]
