[package]
name = "emit-smoke-test"
version = "0.0.0"
publish = false
edition = "2021"

[[bin]]
name = "emit-smoke-test"
path = "main.rs"

[dependencies.emit]
path = "../../"
features = ["serde"]

[dependencies.emit_otlp]
path = "../../targets/otlp"

[dependencies.emit_term]
path = "../../targets/term"

[dependencies.emit_file]
path = "../../targets/file"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread"]
