[package]
name = "emit-ui"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.emit]
path = "../../"
features = [
    "std",
    "tracing",
    "sval",
    "serde",
]

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.sval_json]
version = "1.0.0-alpha.5"
features = ["std"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.trybuild]
version = "1"

[dependencies.tracing-subscriber]
version = "0.2"
